better connection handling and connection conf file structure

--- a/src/config_files/demo.conf
+++ b/src/config_files/demo.conf
@@ -1,3 +1,9 @@
+################################################################################
+#                                                                              #
+# Postgres Connection Conf file for Openmolar                                  #
+#                                                                              #
+################################################################################
+
 # this conf file gives connection criteria for a TCP/IP connection
 # over localhost to a postgres database "openmolar_demo"
 # running on port 5432 (the default for postgres)
@@ -7,13 +13,29 @@
 # the name you use to identify this connection (ie. a human
 # readable name which can be, be need not be
 # the actual database name)
-name = Openmolar Demo Database
+name = Local Demo Database (stored in ~/.openmolar2....)
 
 # information use to specify the connection type.
-type = TCP/IP
-auth = plain_password
+# values can be TCP/IP or UNIX_SOCKET
 
+#type = TCP/IP
+#type = UNIX_SOCKET
+
+type = TCP/IP
+
+# authorisation. the default is to include the password in this file.
+# openmolar will not accept this unless this file is read only for the current
+# user.
+# for hightened security, you can specify here that is is prompted for instead.
+
+#auth = supplied_password
+#auth = prompt_for_password
+
+auth = supplied_password
+
+# now supply params.
 # the following fields are required for connection to a postgres database
+# if auth is prompt for password, the password line can be commented out.
 
 host = localhost
 port = 5432
